# RoleMirror

./: .env  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  analyze_report.py  evaluate_logs.py  main.py  pyproject.toml  requirements.txt  test_logs.json
.github/workflows/: ci.yml
report_analysis/multi_npcs_single_scenario/: analysis_report.md  processed_data.csv
report_analysis/single_npc_multi_scenarios/: analysis_report.md  processed_data.csv
reports/: external_log_eval.json  multi_npcs_single_scenario.json  report_20260121_080136.json  report_20260121_081440.json  single_npc_multi_scenarios.json
reports_test/: log_eval_20260121_112043.json  log_eval_20260121_112103.json  log_eval_20260121_112358.json
src/: llm_client.py
src/agents/: base.py  npc.py  simulator.py
src/core/: grader.py  log_evaluator.py  metrics.py  runner.py  safety.py
src/data/: blocked_words.json  external_logs_sample.json  grader_config.json  npcs.json  scenarios.json
test_extension/: report_20260121_183914.json  report_20260121_183947.json  report_20260121_184028.json  report_20260121_184041.json
tests/: test_metrics.py
